gtk/gtkframe.h
@@ -97,12 +97,9 @@ GDK_AVAILABLE_IN_ALL
 GtkWidget *gtk_frame_get_label_widget (GtkFrame      *frame);
 GDK_AVAILABLE_IN_ALL
 void       gtk_frame_set_label_align  (GtkFrame      *frame,
-				       gfloat         xalign,
-				       gfloat         yalign);
+				       gfloat         xalign);
 GDK_AVAILABLE_IN_ALL
-void       gtk_frame_get_label_align  (GtkFrame      *frame,
-				       gfloat        *xalign,
-				       gfloat        *yalign);
+gfloat     gtk_frame_get_label_align  (GtkFrame      *frame);
 GDK_AVAILABLE_IN_ALL
 void       gtk_frame_set_shadow_type  (GtkFrame      *frame,
 				       GtkShadowType  type);
